--- a/global.css
+++ b/global.css
@@ -1,15 +1,20 @@
 html,
 body {
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  line-height: 1.6;
-  font-size: 62.5%;
+  line-height: 1.5;
+  /* font-size: 62.5%; */
+  max-width: 800px;
 }
 
 * {
   box-sizing: border-box;
+}
+
+p {
+  font-size: 1.6rem;
 }
 
 a {
