--- a/global.css
+++ b/global.css
@@ -5,7 +5,6 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   line-height: 1.5;
-  /* font-size: 62.5%; */
   max-width: 800px;
 }
 
@@ -25,4 +24,8 @@ a {
 img {
   max-width: 100%;
   display: block;
+}
+
+li:hover {
+  background: yellow;
 }
