--- a/global.css
+++ b/global.css
@@ -5,7 +5,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   line-height: 1.5;
-  max-width: 800px;
+  max-width: 42rem;
 }
 
 * {
@@ -25,7 +25,7 @@ img {
   max-width: 100%;
   display: block;
 }
-
+/* 
 li:hover {
-  background: yellow;
-}
+  background: red;
+} */
