--- a/global.css
+++ b/global.css
@@ -25,6 +25,11 @@ img {
   max-width: 100%;
   display: block;
 }
+
+h1 {
+  font-size: 1.5rem;
+  font-weight: lighter
+}
 /* 
 li:hover {
   background: red;
